# personal-website

./: .env.example  .gitignore  AllMarketingAgencies_checkpoint.json  AllMarketingAgencies_personalized.csv  AllMarketingAgencies_personalized_checkpoint.json  AllMarketingAgencies_personalized_filtered.csv  AllMarketingAgencies_v3_test100.csv  AllMarketingAgencies_v4_test100.csv  CLAUDE.md  ITMSPs.csv  ITMSPs_checkpoint.json  ITMSPs_personalized_test100.csv  discovery.db  list_discovery.db  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vercel.json
insurance_pipeline/: .env.example  README.md  pyproject.toml
insurance_pipeline/data/: leads.db  leads.json
insurance_pipeline/insurance_pipeline/: apollo.py  daily_run.py  db.py  enrichment.py  llm.py  models.py  outreach.py  policy_fit.py  scoring.py
insurance_pipeline/insurance_pipeline/sources/: edgar_form_d.py  fmcsa.py  funding.py  sos_fl.py  usaspending.py
insurance_pipeline/tests/: conftest.py  test_apollo.py  test_contact_strength.py  test_db.py  test_enrichment.py  test_policy_fit.py  test_scoring.py  test_sources_edgar_form_d.py  test_sources_fmcsa.py  test_sources_funding.py  test_sources_sos_fl.py  test_sources_usaspending.py
pipeline/: .env.example  CLAUDE.md  INSURANCE_FIXES_BEFORE_REVIEW.md  INSURANCE_PLAN.md  M1.md  M10.md  M2.md  M3.md  M4.md  M5.md  M6.md  M7.md  M8.md  M9.md  README.md  ROADMAP.md  pyproject.toml
pipeline/data/: leads.db  leads.json
pipeline/msp_pipeline/: apollo.py  daily_run.py  db.py  enrichment.py  llm.py  models.py  outreach.py  scoring.py
pipeline/msp_pipeline/scripts/: apollo_probe.py
pipeline/msp_pipeline/sources/: breaches.py  business_filings.py  funding.py  (+2 more)
pipeline/tests/: conftest.py  test_apollo.py  test_daily_run.py  test_db.py  test_enrichment.py  test_outreach.py  test_scoring.py  test_sources_breaches.py  test_sources_business_filings.py  test_sources_funding.py  test_sources_jobs.py  test_sources_jobs_insurance.py
(+282 files in other folders)
