[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance-lead-magnet"
version = "0.0.1"
description = "Insurance lead magnet pipeline. Sibling of msp_pipeline; no shared imports."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
    "rapidfuzz>=3.0",
    "openai>=1.50",
    "google-genai>=0.3",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.setuptools]
packages = ["insurance_pipeline", "insurance_pipeline.sources"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["requests", "requests.*", "bs4", "feedparser"]
ignore_missing_imports = true
